tests/invalid/trait/ambiguous_impl.facet
trait Show;

struct Box<T> where T: Show {
  value: affine T
}

impl<T> Show for affine T;
impl Show for affine isize;

fn main() -> affine Box<affine isize> {
  Box<affine isize> { value = 1 }
}
